Use ProcessBuilder in OSRun